Fixed Double Scrollbar Issue

--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ html, body {
     background-color: var(--main-background);
     margin: 0;
     padding: 0;
-    overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 i {
@@ -38,7 +38,8 @@ img {
 .wrapper {
     display: flex;
     align-items: center;
-    width: 100%;
+    width: 100vw;
+    overflow-x: hidden; 
 }
 
 .main {
